@@ -129,6 +129,14 @@ static char *get_full_description(struct frontend *obj, struct question *q);
  */
 #define TITLE_PADDING 9
 
+/*  At least one blue line on top
+ *  One line for the title / top frame
+ *  One line for the bottom frame
+ *  One line for shadow on the bottom
+ *  One line with a menu
+ */
+#define MIN_DECORATION_HEIGHT 5
+
 /* gettext would be much nicer :-( */
 static const char *
 continue_text(struct frontend *obj)
@@ -292,8 +300,10 @@ min_window_height(struct frontend *obj, struct question *q, int win_width)
         height += cdebconf_newt_get_text_height(q_text, win_width) + 1;
         free (q_text);
     }
-    if (strcmp(type, "multiselect") == 0 || strcmp(type, "select") == 0)
+    if (strcmp(type, "multiselect") == 0)
         height += 4; // x lines for choices + blank line
+    else if (strcmp(type, "select") == 0)
+        height += 2; // as multiselect, but without a button and blank line
     else if (strcmp(type, "string") == 0 || strcmp(type, "password") == 0)
         height += 2; // input line + blank line
     // the others don't need more space
@@ -308,8 +318,7 @@ need_separate_window(struct frontend *obj, struct question *q)
 
     newtGetScreenSize(&width, &height);
     x = min_window_height(obj, q, width-7);
-    return (x > height-5);
-    // 5: blue border + title + bottom frame + shadow + menu
+    return (x > height-MIN_DECORATION_HEIGHT);
 }
 
 static char *
@@ -687,6 +696,8 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
     int listflags = NEWT_FLAG_RETURNEXIT;
     int width = 80, height = 24;
     int win_width, win_height = -1, t_height, t_width, sel_height, sel_width;
+    int select_list_top;
+    int b_height;
     int t_width_title, t_width_buttons;
     char **choices, **choices_trans, *defval;
     int count = 0, i, ret, defchoice = -1;
@@ -766,18 +777,26 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
         t_height = newtTextboxGetNumLines(textbox);
         newtTextboxSetHeight(textbox, t_height);
         newtFormAddComponent(form, textbox);
-    } else
+        b_height = 0; // A <Go Back> button is not necessary
+        select_list_top = 1+t_height+1;
+    } else {
         t_height = 0;
+        b_height = 1;
+        select_list_top = 1; // No description. Only insert a blank line.
+    }
     free(full_description);
-    win_height = t_height + 5 + sel_height;
-    if (win_height > height-5) {
-        win_height = height-5;
-        sel_height = win_height - t_height - 5;
+    win_height  = t_height + sel_height + b_height;
+    //    3 == First blank line + blanks before and after select
+    // or 3 == Blanks before and after select + blank after <Go Back>
+    win_height += 3;
+    if (win_height > height-MIN_DECORATION_HEIGHT) {
+        win_height = height-MIN_DECORATION_HEIGHT;
+        sel_height = win_height - t_height - 3 - b_height;
     }
     if (count > sel_height)
         listflags |= NEWT_FLAG_SCROLL;
     cdebconf_newt_create_window(win_width, win_height, obj->title, q->priority);
-    listbox = newtListbox((win_width-sel_width-3)/2, 1+t_height+1, sel_height, listflags);
+    listbox = newtListbox((win_width-sel_width-3)/2, select_list_top, sel_height, listflags);
     defval = (char *)question_getvalue(q, "");
     for (i = 0; i < count; i++) {
         newtListboxAppendEntry(listbox, choices_trans[i], choices[tindex[i]]);
